Widget box in blog with search(not complete yet) and categories added(no design)

--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,8 @@ title = "My New Hugo Site"
 paginate = 5 #frontpage pagination
 disqusShortname = "localblog-2"
 
+[outputs]
+  home = [ "HTML", "RSS", "JSON"]
 
 [menu]
 
