--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = "http://localhost:1313/"
+baseURL = ""
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "scOrange"
 paginate = 5 #frontpage pagination
 disqusShortname = "localblog-2"
 
